{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Player",
            "id": "85950e0e-4dc9-45b8-a80c-a9963bf063b4",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "513a7a5d-7cd1-458a-a2e6-3ba3019ddbac",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LaunchDecoy",
                    "type": "Button",
                    "id": "b88c53c6-a8f4-4fc0-bf1d-9148035325eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RideUpDecoy",
                    "type": "Button",
                    "id": "100e770c-5052-46a1-97fc-fb530bb63356",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "394f3bd0-d710-4f8e-9b6b-072d180d0f8a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "b2a4824f-2e28-41f7-9f8e-e800e65dad72",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "bec83b38-6bcf-4727-9e6b-78e55ac49d86",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5021ec00-dd31-45e9-a8c0-fb404f603769",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LaunchDecoy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5df38e6b-d75d-4960-96e9-532fe41cbd37",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RideUpDecoy",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}